--- a/javascript/palindrome-checker/styles.css
+++ b/javascript/palindrome-checker/styles.css
@@ -1,4 +1,4 @@
-html {
+* {
   /* Colours */
   --primary: #0d1b2a; /* Rich Black */
   --secondary: #778da9; /* Silver Lake Blue */
@@ -9,10 +9,15 @@ html {
   /* base 16 for rem; */
   font-size: 16px;
   margin: 0;
-  font-family: "Alegreya", serif;
+  font-family: sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
+
+  /* Removing previously made settings */
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -24,7 +29,7 @@ main {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
+  min-height: 100vh;
 }
 
 #checker {
@@ -33,6 +38,7 @@ main {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   min-height: 9rem;
   box-shadow: 0rem 0.2rem 0.5rem var(--shadow);
 }
@@ -54,42 +60,67 @@ button {
 }
 
 #text-input {
-  width: 16rem;
+  width: 18rem;
   border: none;
   background-color: var(--secondary);
   border-bottom: solid 0.15rem var(--accent);
-  color: black;
-  font-size: 1.2rem;
+  color: white;
+  font-size: 1.4rem;
 }
 
 #check-btn {
-  width: 5rem;
-  height: 2rem;
+  width: 4rem;
   margin-left: 0.25rem;
   background-color: var(--accent);
-  border-radius: 0.5rem;
+  border-radius: 0.75rem;
   border: none;
   color: black;
-  font-size: 1.1rem;
+  font-size: 1rem;
+}
+
+#entry {
+  padding-bottom: 1.25rem;
 }
 
 #text-input,
 #check-btn {
-  height: 2rem;
+  height: 2.5rem;
 }
 
 #info {
   text-align: center;
 }
 
+#checker-text {
+  padding-bottom: 1rem;
+}
+
+#result {
+  padding-bottom: 1rem;
+}
+
 h1 {
-  font-size: 2rem;
+  font-size: 3.25rem;
   color: #ffffff;
+  margin-bottom: 1rem;
 }
 
 p {
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin: 1rem;
   color: white;
-  font-size: 1.1rem;
+  font-size: 1.25rem;
+}
+
+strong {
+  font-size: 1.4rem;
+  font-weight: 600;
+}
+
+i {
+  font-size: 1.25rem;
+  font-style: italic;
+}
+
+.hide {
+  display: none;
 }
